# Super_Mario

./: .gitignore  CMakeLists.txt  Final Report.md  README.md  瑞芳高工選手筆記.md
PTSD/include/: config.hpp
PTSD/include/Util/: Renderer.hpp
PTSD/src/Core/: Context.cpp  Program.cpp  Shader.cpp
PTSD/src/Util/: Image.cpp  Input.cpp
Resources/Image/ICON/: app.rc
Resources/MAP/: Form_1_1_Characters.txt  Form_1_1_Images.txt  Form_1_1_Pipe_Images.txt  Form_1_1_Pipe_Texts.txt  Form_1_1_Texts.txt  Form_1_1_to_1_2_Images.txt  Form_1_2_Characters.txt  Form_1_2_Images.txt  Form_1_2_Pipe_Images.txt  Form_1_2_Pipe_Texts.txt  Form_1_2_to_1_4_Images.txt  Form_1_4_Characters.txt  Form_1_4_Images.txt  map1_1.txt  map1_1_Brick.txt  map1_1_Flagpole.txt  map1_1_QuestionBlock.txt  map1_1_StairsBrick.txt  map1_1_door.txt  map1_1_floor.txt  map1_1_pipe.txt
Resources/super mario/: gif to png.py
Super_Mario/: CMakeLists.txt  Super_Mario.cpp  Super_Mario.h
include/: BackgroundObject.hpp  Button.hpp  ButtonCallBackFunc.hpp  Character.hpp  EventCallBackFunc.hpp  FilePath.hpp  FormProfile.hpp  GameManager.hpp  ImageObject.hpp  ImageResizer.hpp  InitFormFunc.hpp  Mario.hpp  MyBGM.hpp  MyContext.hpp  MyDefine.hpp  Object.hpp  Position.hpp  ProgressBar.hpp  TextObject.hpp  incInterface.hpp  incallobj.hpp  userType.hpp
include/Form/: Form.hpp  FormManger.hpp  FormNames.hpp
include/Object/: Brick.hpp  Button.hpp  Character.hpp  CheckPoint.hpp  Coin.hpp  Door.hpp  EventObject.hpp  FireBall.hpp  FlagFromPole.hpp  Flagpole.hpp  Floor.hpp  Goomba.hpp  HiddenBrick.hpp  ImageObject.hpp  MakeObject.hpp  Mario.hpp  Object.hpp  ObjectType.hpp  PipeBrick.hpp  Points.hpp  QuestionBlock.hpp  SpinningFireBalls.hpp  Stairs.hpp  TextObject.hpp  Turtle.hpp
include/Object/Brick/: Axe.hpp  Brick.hpp  Bridge.hpp  CheckPoint.hpp  Coin.hpp  ContinueCoinBrick.hpp  Door.hpp  FireBall.hpp  Flagpole.hpp  Floor.hpp  HiddenBrick.hpp  LeftEdge.hpp  MovingPlatform.hpp  PipeBrick.hpp  PropBrick.hpp  QuestionBlock.hpp  SpinningFireBalls.hpp  Stairs.hpp
include/Object/Character/: Character.hpp  Goomba.hpp  Koopa.hpp  Mario.hpp  PiranaPlant.hpp  Turtle.hpp
include/Object/Interface/: ICollisionable.hpp  IComeDownable.hpp  IFrames.hpp  IJumpable.hpp  IMovable.hpp
include/Object/Props/: FireFlower.hpp  Mushroom.hpp  Props.hpp  Starman.hpp
src/: BackgroundObject.cpp  Brick.cpp  Button.cpp  Character.cpp  Coin.cpp  FireBall.cpp  FireFlower.cpp  FormProfile.cpp  GameManager.cpp  Goomba.cpp  HiddenBrick.cpp  ImageObject.cpp  MakeObject.CPP  Mario.cpp  Mushroom.cpp  MyBGM.cpp  MyContext.cpp  QuestionBlock.cpp  SpinningFireBalls.cpp  Starman.cpp  TextObject.cpp  Turtle.cpp  main.cpp
src/Object/: Button.cpp  FireFlower.cpp  FlagFromPole.cpp  ImageObject.cpp  Mushroom.cpp  Points.cpp  Starman.cpp  TextObject.cpp
src/Object/Brick/: Axe.cpp  (+12 more)
(+6 files in other folders)
